test/errors/js_errors1.input.asm
* = $801

!use "./js_errors1" as p ; can't load because of syntax error in js
